# open-webpage

./: .gitattributes  .gitignore  .prettierignore-sync  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  toolsync.json  tsconfig.json  tsup.config.ts
.changeset/: clear-heads-glow.md  clever-breads-work.md  curvy-tools-stick.md  hot-worlds-give.md
.github/workflows/: CI.yml
__test__/: index.spec.mjs
example/: abort-controller.mjs  package.json  pnpm-lock.yaml  simple.cjs  simple.mjs
examples/: simple.cjs
js/: async.d.mts  async.mjs  debug.mjs
js/sync/: open-webpage.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: pkg-ok.sh  update-readme.mjs
src/: lib copy.rs  lib.rs  types.rs
src-js/: index.ts
