[package]
edition = "2021"
name = "lhechenberger_open-webpage"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi9"] }
napi-derive = "2.12.2"
tao = "0.32.1"
wry = "0.49.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
